ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/External_CAM_Data__c.object-meta.xml
<CustomObject>
    <label>External CAM Data</label>
    <nameField>
        <displayFormat>EC-{00000000}</displayFormat>
        <label>External CAM No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External CAM Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>