ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Above_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Above_90_Days__c</fullName>
    <label>Above 90 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>