ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Account_Type_Desc__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Desc__c</fullName>
    <label>Account Type Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>