ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Adv_Amt__c.field-meta.xml
<CustomField>
    <fullName>Adv_Amt__c</fullName>
    <label>Adv Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>