ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Adv_Nos__c.field-meta.xml
<CustomField>
    <fullName>Adv_Nos__c</fullName>
    <label>Adv Nos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>