ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/AmountOverdue__c.field-meta.xml
<CustomField>
    <fullName>AmountOverdue__c</fullName>
    <label>AmountOverdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>