ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/App_No__c.field-meta.xml
<CustomField>
    <fullName>App_No__c</fullName>
    <label>App No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>