ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>External CAM Data</relationshipLabel>
    <relationshipName>External_CAM_Data</relationshipName>
    <type>Lookup</type>
</CustomField>