ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Below_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Below_30_Days__c</fullName>
    <label>Below 30 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>