ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/CAM__c.field-meta.xml
<CustomField>
    <fullName>CAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAM</label>
    <referenceTo>CAM__c</referenceTo>
    <relationshipLabel>External CAM Data</relationshipLabel>
    <relationshipName>External_CAM_Data</relationshipName>
    <type>Lookup</type>
</CustomField>