ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/CIBIL_Detect_Decision__c.field-meta.xml
<CustomField>
    <fullName>CIBIL_Detect_Decision__c</fullName>
    <label>CIBIL Detect Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>