ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/CIBIL_Score__c.field-meta.xml
<CustomField>
    <fullName>CIBIL_Score__c</fullName>
    <label>CIBIL Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>