ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/CIBIL_Version__c.field-meta.xml
<CustomField>
    <fullName>CIBIL_Version__c</fullName>
    <label>CIBIL Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>