ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/CurrentBalance__c.field-meta.xml
<CustomField>
    <fullName>CurrentBalance__c</fullName>
    <label>CurrentBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>