ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Date_Of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Enquiry__c</fullName>
    <label>Date Of Enquiry</label>
    <type>Date</type>
</CustomField>