ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Deposit_Available__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Available__c</fullName>
    <label>Deposit Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>