ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Enquiring_Member__c.field-meta.xml
<CustomField>
    <fullName>Enquiring_Member__c</fullName>
    <label>Enquiring Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>