ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Enquiry_Amount__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Amount__c</fullName>
    <label>Enquiry Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>