ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Final_Decision__c.field-meta.xml
<CustomField>
    <fullName>Final_Decision__c</fullName>
    <label>Final Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>