ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/HighCredit__c.field-meta.xml
<CustomField>
    <fullName>HighCredit__c</fullName>
    <label>HighCredit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>