ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Inprinciple_Decision__c.field-meta.xml
<CustomField>
    <fullName>Inprinciple_Decision__c</fullName>
    <label>Inprinciple Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>