ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User RC APD</fullName>
            </value>
            <value>
                <fullName>User Insurance APD</fullName>
            </value>
            <value>
                <fullName>Dealer RC APD</fullName>
            </value>
            <value>
                <fullName>Dealer Insurance APD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>