ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/NPAA_LOS__c.field-meta.xml
<CustomField>
    <fullName>NPAA_LOS__c</fullName>
    <label>NPAA LOS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>