ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/ReasonforOverdue__c.field-meta.xml
<CustomField>
    <fullName>ReasonforOverdue__c</fullName>
    <label>ReasonforOverdue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>