ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/STD3_LOS__c.field-meta.xml
<CustomField>
    <fullName>STD3_LOS__c</fullName>
    <label>STD3 LOS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>