ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Total_Deals__c.field-meta.xml
<CustomField>
    <fullName>Total_Deals__c</fullName>
    <label>Total Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>