ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Total_Pending__c.field-meta.xml
<CustomField>
    <fullName>Total_Pending__c</fullName>
    <label>Total Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>