ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/Trend_Type__c.field-meta.xml
<CustomField>
    <fullName>Trend_Type__c</fullName>
    <label>Trend Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>