ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/X30_To_60_Days__c.field-meta.xml
<CustomField>
    <fullName>X30_To_60_Days__c</fullName>
    <label>30 To 60 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>