ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/fields/X60_To_90_Days__c.field-meta.xml
<CustomField>
    <fullName>X60_To_90_Days__c</fullName>
    <label>60 To 90 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>