ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/recordTypes/APD_Pending.recordType-meta.xml
<RecordType>
    <fullName>APD_Pending</fullName>
    <active>true</active>
    <label>APD Pending</label>
</RecordType>