ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/recordTypes/CIBIL_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>CIBIL_Enquiry</fullName>
    <active>true</active>
    <label>CIBIL Enquiry</label>
</RecordType>