ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/recordTypes/CIBIL_Exposure.recordType-meta.xml
<RecordType>
    <fullName>CIBIL_Exposure</fullName>
    <active>true</active>
    <label>CIBIL Exposure</label>
</RecordType>