ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/recordTypes/CIBIL_Time_Line.recordType-meta.xml
<RecordType>
    <fullName>CIBIL_Time_Line</fullName>
    <active>true</active>
    <label>CIBIL Time Line</label>
</RecordType>