ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/recordTypes/Non_IBL_Exposure.recordType-meta.xml
<RecordType>
    <fullName>Non_IBL_Exposure</fullName>
    <active>true</active>
    <label>Non IBL Exposure</label>
</RecordType>