ProdIND/ProdPrograms/force-app/main/default/objects/External_CAM_Data__c/recordTypes/Portfolio.recordType-meta.xml
<RecordType>
    <fullName>Portfolio</fullName>
    <active>true</active>
    <label>Portfolio</label>
</RecordType>